regression/negative/duplicated_equ.asm
        device zxspectrum128

label   equ #1234
label   equ #4321
