regression/negative/duplicated_equ.out
duplicated_equ.asm(4): error: Duplicate label: label
Pass 1 complete (1 errors)
Pass 2 complete (1 errors)
duplicated_equ.asm(3): warning: Label has different value in pass 3: previous value 17185 not equal 4660
duplicated_equ.asm(4): warning: Label has different value in pass 3: previous value 4660 not equal 17185
Pass 3 complete
Errors: 1, warnings: 2, compiled: 5 lines
